--- a/azercell.html
+++ b/azercell.html
@@ -34,8 +34,8 @@
         <div class="bg">
             <p>
                 Azercell Telecom started its activities on 15 December 1996 offering subscribers mobile telecommunications services based on postpaid system. The prepaid system was launched with tariff package — SimSim, in 1998. On 5th March, 2018, Azerbaijan International
-                Telecom and the company Fintur Holdings B.V. signed an agreement to sell 51.3 percent of the shares of Azertel Telekomunikasyon Yatırım Dış Ticaret A.Ş. Azertel is the sole founder of Azercell. Azercell has invested more than 1 billion
-                USD in projects aimed improving the social welfare of the country.
+                Telecom and the company Fintur Holdings B.V. signed an agreement to sell 51.3 percent of the shares of Azertel Telekomunikasyon Yatırım Dış Ticaret A.Ş. Azertel is the sole founder of Azercell. Azercell has invested more than 1 billionUSD
+                in projects aimed improving the social welfare of the country.
 
             </p>
         </div>
