--- a/bakcell.html
+++ b/bakcell.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
     <link rel="stylesheet" href="css/style.css" />
     <script src="https://kit.fontawesome.com/63852fa8cf.js" crossorigin="anonymous"></script>
     <title>Mobile Operators | Bakcell</title>
@@ -17,7 +16,7 @@
             <div class="row">
                 <div class="col-md-3 logo">
                     <a href="/">
-                    <img src="img/logo.png" alt="" />
+                        <img src="img/logo.png" alt="" />
                     </a>
                 </div>
                 <div class="col-md-9 menu">
@@ -35,52 +34,115 @@
     <section id="bakcell">
         <div class="bakcell-bg"></div>
         <div class="bg">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim suscipit laudantium, eligendi pariatur harum porro doloribus laborum molestiae modi! Tenetur explicabo iusto voluptatum facilis soluta totam praesentium. Mollitia, libero quos!
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut voluptate laborum nobis soluta nostrum. Ea aut distinctio, odio iusto amet labore delectus accusantium minima. Corrupti laboriosam reprehenderit animi consequatur sequi.
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut voluptate laborum nobis soluta nostrum. Ea aut distinctio, odio iusto amet labore delectus accusantium minima. Corrupti laboriosam reprehenderit animi consequatur sequi.
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut voluptate laborum nobis soluta nostrum. Ea aut distinctio, odio iusto amet labore delectus accusantium minima. Corrupti laboriosam reprehenderit animi consequatur sequi.
+            <p>Bakcell is part of NEQSOL Holding, which is diversified group of companies operating across industries and countries. The main areas of business operations include oil and gas, telecommunications, hi-tech, and construction industries. The
+                geographical area in which companies within group provide operations and services includes countries such as the UK, the USA, Turkey, Azerbaijan, Ukraine, Georgia, Kazakhstan, United Arab Emirates, and Bangladesh.
             </p>
         </div>
     </section>
 
     <!-- <section id="product-visual-info"></section> -->
-
     <section id="packages">
-        <h3>The best-selling Bakcell Packages</h3><br>
+        <h2>Tarrifs which are provided by Bakcell</h2>
         <h4>Pick a Pricing Plan</h4>
         <div class="packages-container">
             <div class="package">
                 <h3>
-                    Basic
+                    ƏlaSAAT
                 </h3>
-                <h4>$ 29.11 /month</h4>
-                <p>700 Minute Calls</p>
-                <p>2 IP Dedicated</p>
-                <p>10 Phone Number</p>
-                <p>Personal Server</p>
-                <p>15 Countries</p>
+                <h4>0.7 manats per hour</h4>
+                <p>300 / 600 Minute Calls</p>
+                <p>1000 sms</p>
+                <p>Unlimited texting in Whatsapp</p>
+                <p>500MB Internet for Bakcell apps</p>
                 <button class='btn-gradient'>Order now</button>
             </div>
             <div class="package">
-                <h3>Standered</h3>
-                <h4>$ 29.11 /month</h4>
-                <p>700 Minute Calls</p>
-                <p>2 IP Dedicated</p>
-                <p>10 Phone Number</p>
-                <p>Personal Server</p>
-                <p>15 Countries</p>
+                <h3>DaimOnline</h3>
+                <h4>6 , 10 manats / month</h4>
+                <p>300 / 600 Minute Calls</p>
+                <p>3 GB / 6 GB Internet</p>
+                <p>Unlimited texting in Whatsapp</p>
+                <p>3 GB/ 6 GB Internet for Bakcell apps</p>
                 <button class='btn-gradient'>Order now</button>
             </div>
             <div class="package">
-                <h3>Enterprise</h3>
-                <h4>$ 29.11 /month</h4>
-                <p>700 Minute Calls</p>
-                <p>2 IP Dedicated</p>
-                <p>10 Phone Number</p>
-                <p>Personal Server</p>
-                <p>15 Countries</p>
+                <h3>ILK</h3>
+                <h4>Free on subscription</h4>
+                <p>500 MB Internet - 3 AZN</p>
+                <p>2 AZN FREE</p>
+                <p>5 GB Internet - 10 AZN</p>
+                <p>1 MB- 0.04 AZB without package</p>
+
                 <button class='btn-gradient'>Order now</button>
             </div>
+
+        </div>
+    </section>
+
+    <section id="packages">
+        <h2>Internet packets</h2>
+
+        <div class="packages-container">
+            <div class="package">
+
+                <h3>1 AZN per month</h3>
+                <p>60 MB Internet</p>
+                <p>Period of Usage - 15 days</p>
+                <p>Unlimited texting in Whatsapp</p>
+                <p>Auto refreshing of package</p>
+                <button class='btn-gradient'>Order now</button>
+            </div>
+            <div class="package">
+
+                <h3>3 AZN per month</h3>
+                <p>500 MB Internet</p>
+                <p>Period of Usage - 1 month</p>
+                <p>Unlimited texting in Whatsapp</p>
+                <p>Auto refreshing of package</p>
+                <button class='btn-gradient'>Order now</button>
+            </div>
+            <div class="package">
+
+                <h3>5 AZN per month</h3>
+                <p>1 GB Internet</p>
+                <p>Period of Usage - 1 month</p>
+                <p>Unlimited texting in Whatsapp</p>
+                <p>Auto refreshing of package</p>
+                <button class='btn-gradient'>Order now</button>
+            </div>
+
+        </div>
+    </section>
+    <section id="packages">
+        <div class="packages-container">
+            <div class="package">
+
+                <h3>10 AZN per month</h3>
+                <p>15 GB Internet</p>
+                <p>Period of Usage -1 month</p>
+                <p>Unlimited texting in Whatsapp</p>
+                <p>Auto refreshing of packahe</p>
+                <button class='btn-gradient'>Order now</button>
+            </div>
+            <div class="package">
+
+                <h3>25 AZN per month</h3>
+                <p>30 GB Internet</p>
+                <p>Period of Usage - 15 days</p>
+                <p>Unlimited texting in Whatsapp</p>
+                <p>Auto refreshing of packahe</p>
+                <button class='btn-gradient'>Order now</button>
+            </div>
+            <div class="package">
+
+                <h3>30 AZN per month</h3>
+                <p>50 GB Internet</p>
+                <p>Period of Usage - 15 days</p>
+                <p>Unlimited texting in Whatsapp</p>
+                <p>Auto refreshing of packahe</p>
+                <button class='btn-gradient'>Order now</button>
+            </div>
+
         </div>
     </section>
 
@@ -88,12 +150,11 @@
     <footer>
         <div>
             <div class="footer-logo">
-                <img src="img/logo.png" height="73" alt="">
+                <img src="img/logo.png" width="190" height="73" alt="">
                 <p>
-                    There are variations of passages of Lorem Ipsum available, the majority have suffered alteration.
-                </p>
+                    We are here to get you familiar with mobile operators which are functioning in Azerbaijan. Check out the site and choose which is the best one for you</p>
             </div>
-          <div class="help-line">
+            <div class="help-line">
                 <h4>Mobile Services</h4>
                 <ul>
                     <li><a href="azercell.html">Azercell</a></li>
@@ -104,7 +165,8 @@
             <div class="menu-line">
                 <h4>Menu Line</h4>
                 <ul>
-                    <li><a href="">Home</a></a></li>
+                    <li><a href="">Home</a></a>
+                    </li>
                     <li><a href="#service-info">Service</a></li>
                     <li><a href="#desc">About</a></li>
                     <li><a href="">Contact</a></li>
