--- a/contact.html
+++ b/contact.html
@@ -63,44 +63,47 @@
 
   <!-- <section id="product-visual-info"></section> -->
 
-  <section id="packages">
-    <h3>Package</h3>
-    <h4>Pick a Pricing Plan</h4>
-    <div class="packages-container">
-      <div class="package">
-        <h3>
-          Basic
-        </h3>
-        <h4>$ 29.11 /month</h4>
-        <p>700 Minute Calls</p>
-        <p>2 IP Dedicated</p>
-        <p>10 Phone Number</p>
-        <p>Personal Server</p>
-        <p>15 Countries</p>
-        <button class='btn-gradient'>Order now</button>
-      </div>
-      <div class="package">
-        <h3>Standered</h3>
-        <h4>$ 29.11 /month</h4>
-        <p>700 Minute Calls</p>
-        <p>2 IP Dedicated</p>
-        <p>10 Phone Number</p>
-        <p>Personal Server</p>
-        <p>15 Countries</p>
-        <button class='btn-gradient'>Order now</button>
-      </div>
-      <div class="package">
-        <h3>Enterprise</h3>
-        <h4>$ 29.11 /month</h4>
-        <p>700 Minute Calls</p>
-        <p>2 IP Dedicated</p>
-        <p>10 Phone Number</p>
-        <p>Personal Server</p>
-        <p>15 Countries</p>
-        <button class='btn-gradient'>Order now</button>
-      </div>
-    </div>
-  </section>
+ <section id="packages">
+        <h3>Most profiteable tarrifs</h3>
+        <h4>Pick a Pricing Plan</h4>
+        <div class="packages-container">
+            <div class="package">
+                <h3>
+                    Azercell
+                </h3>
+                <h3>
+                    GencOl
+                </h3>
+                <h4> 9 manats /month</h4>
+                <p>600 Minute Calls</p>
+                <p>3 GB Internet </p>
+                <p>Limitless whatsapp texting</p>
+                <p>For ordering G9=7575</p>
+                <button class=' btn-gradient '>Order now</button>        
+            </div>
+            <div class="package">
+                <h3>Bakcell</h3>
+                <h3>DaimOnline</h3>
+                <h4> 10 manats /month</h4>
+                <p>100 Minute Calls</p>
+                <p>5 GB Internet</p>
+                <p>Free Whatsap</p>
+                <p>Free Facebook</p>
+                <button class=' btn-gradient '>Order now</button>
+            </div>
+            <div class="package">
+                <h3>Nar</h3>
+                <h3>Cavan Nar</h3>
+
+                <h4>9 manats /month</h4>
+                <p>500 Minute Calls</p>
+                <p>5 GB Intenrt</p> 
+                <p>5 GB Social Media</p>
+                <p>Send C9 to 777</p>
+                <button class=' btn-gradient '>Order now</button>
+            </div>
+        </div>
+    </section>
 
   <!-- <section id="operators"></section> -->
   <footer>
