--- a/nar.html
+++ b/nar.html
@@ -35,10 +35,7 @@
     <section id="nar">
         <div class="nar-bg"></div>
         <div class="bg">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim suscipit laudantium, eligendi pariatur harum porro doloribus laborum molestiae modi! Tenetur explicabo iusto voluptatum facilis soluta totam praesentium. Mollitia, libero quos!
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut voluptate laborum nobis soluta nostrum. Ea aut distinctio, odio iusto amet labore delectus accusantium minima. Corrupti laboriosam reprehenderit animi consequatur sequi.
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut voluptate laborum nobis soluta nostrum. Ea aut distinctio, odio iusto amet labore delectus accusantium minima. Corrupti laboriosam reprehenderit animi consequatur sequi.
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut voluptate laborum nobis soluta nostrum. Ea aut distinctio, odio iusto amet labore delectus accusantium minima. Corrupti laboriosam reprehenderit animi consequatur sequi.
+            <p>Nar in Azerbaijani means pomegranate and that fruit is commonly used in the company's advertising which, it has been claimed, is a 'symbol of the relationship between Azerbaijan’s rich cultural heritage and modern life'. In 2011, Nar Mobile advertisements prominently featured Ell & Nikki, Azerbaijan's Eurovision Song Contest 2011 winners. On April 6, the company announced rebranding, changing the brand name as Nar, the logo to symbolize pomegranate & communication bubble, and updating creative platform as "Nar Garden."
             </p>
         </div>
     </section>
@@ -46,41 +43,107 @@
     <!-- <section id="product-visual-info"></section> -->
 
     <section id="packages">
-        <h3>The best-selling Nar Packages</h3><br>
+        <h2>Tarrifs which are provided by Nar Mobile</h2>
         <h4>Pick a Pricing Plan</h4>
         <div class="packages-container">
             <div class="package">
                 <h3>
-                    Basic
+                    Cavan Nar
                 </h3>
-                <h4>$ 29.11 /month</h4>
-                <p>700 Minute Calls</p>
-                <p>2 IP Dedicated</p>
-                <p>10 Phone Number</p>
-                <p>Personal Server</p>
-                <p>15 Countries</p>
+                <h4>6 , 9 manats / month</h4>
+                <p>300 / 600 Minute Calls</p>
+                <p>3 GB / 6 GB Internet</p>
+                <p>Unlimited texting in Whatsapp</p>
+                <p>3 GB/ 6 GB Internet for Nar apps</p>
                 <button class='btn-gradient'>Order now</button>
             </div>
             <div class="package">
-                <h3>Standered</h3>
-                <h4>$ 29.11 /month</h4>
-                <p>700 Minute Calls</p>
-                <p>2 IP Dedicated</p>
-                <p>10 Phone Number</p>
-                <p>Personal Server</p>
-                <p>15 Countries</p>
+                <h3>Yerlim</h3>
+                <h4>30 qepiks per day</h4>
+                <p>Free calls after third Minute</p>
+                <p>Local calls in regions - 0.05 AZN</p>
+                <p>1 SMS - 0.05 AZN</p>
+                <p>1 MB - 0.40 AZN</p>
                 <button class='btn-gradient'>Order now</button>
             </div>
             <div class="package">
-                <h3>Enterprise</h3>
-                <h4>$ 29.11 /month</h4>
-                <p>700 Minute Calls</p>
-                <p>2 IP Dedicated</p>
-                <p>10 Phone Number</p>
-                <p>Personal Server</p>
-                <p>15 Countries</p>
+                <h3>Unikal</h3>
+                <h4>3, 5, 10 AZN /month</h4>
+                <p>500 MB Internet - 3 AZN</p>
+                <p>1 Gb Internet - 5 AZN</p>
+                <p>5 GB Internet - 10 AZN</p>
+                <p>1 MB- 0.04 AZB without package</p>
+
                 <button class='btn-gradient'>Order now</button>
             </div>
+
+        </div>
+    </section>
+
+    <section id="packages">
+        <h2>Internet packets</h2>
+
+        <div class="packages-container">
+            <div class="package">
+
+                <h3>1 AZN per month</h3>
+                <p>60 MB Internet</p>
+                <p>Period of Usage - 15 days</p>
+                <p>Unlimited texting in Whatsapp</p>
+                <p>Auto refreshing of package</p>
+                <button class='btn-gradient'>Order now</button>
+            </div>
+            <div class="package">
+
+                <h3>3 AZN per month</h3>
+                <p>500 MB Internet</p>
+                <p>Period of Usage - 1 month</p>
+                <p>Unlimited texting in Whatsapp</p>
+                <p>Auto refreshing of package</p>
+                <button class='btn-gradient'>Order now</button>
+            </div>
+            <div class="package">
+
+                <h3>5 AZN per month</h3>
+                <p>1 GB Internet</p>
+                <p>Period of Usage - 1 month</p>
+                <p>Unlimited texting in Whatsapp</p>
+                <p>Auto refreshing of package</p>
+                <button class='btn-gradient'>Order now</button>
+            </div>
+
+        </div>
+    </section>
+    <section id="packages">
+        <div class="packages-container">
+            <div class="package">
+
+                <h3>10 AZN per month</h3>
+                <p>15 GB Internet</p>
+                <p>Period of Usage -1 month</p>
+                <p>Unlimited texting in Whatsapp</p>
+                <p>Auto refreshing of packahe</p>
+                <button class='btn-gradient'>Order now</button>
+            </div>
+            <div class="package">
+
+                <h3>25 AZN per month</h3>
+                <p>30 GB Internet</p>
+                <p>Period of Usage - 15 days</p>
+                <p>Unlimited texting in Whatsapp</p>
+                <p>Auto refreshing of packahe</p>
+                <button class='btn-gradient'>Order now</button>
+            </div>
+            <div class="package">
+
+                <h3>30 AZN per month</h3>
+                <p>50 GB Internet</p>
+                <p>Period of Usage - 15 days</p>
+                <p>Unlimited texting in Whatsapp</p>
+                <p>Auto refreshing of packahe</p>
+                <button class='btn-gradient'>Order now</button>
+            </div>
+
         </div>
     </section>
 
@@ -88,12 +151,11 @@
     <footer>
         <div>
             <div class="footer-logo">
-                <img src="img/logo.png" height="73" alt="">
+                <img src="img/logo.png" width="190" height="73" alt="">
                 <p>
-                    There are variations of passages of Lorem Ipsum available, the majority have suffered alteration.
-                </p>
+                    We are here to get you familiar with mobile operators which are functioning in Azerbaijan. Check out the site and choose which is the best one for you</p>
             </div>
-         <div class="help-line">
+            <div class="help-line">
                 <h4>Mobile Services</h4>
                 <ul>
                     <li><a href="azercell.html">Azercell</a></li>
@@ -104,7 +166,8 @@
             <div class="menu-line">
                 <h4>Menu Line</h4>
                 <ul>
-                    <li><a href="">Home</a></a></li>
+                    <li><a href="">Home</a></a>
+                    </li>
                     <li><a href="#service-info">Service</a></li>
                     <li><a href="#desc">About</a></li>
                     <li><a href="">Contact</a></li>
