--- a/index.html
+++ b/index.html
@@ -105,24 +105,12 @@
 
         <div class="service-info-desc">
             <img src="img/logo.png" alt="" width="260">
-            <br>
             <h2>Best Service</h2>
             <h2>we provide</h2>
             <p>We are here to get you familiar with mobile operators which are functioning in Azerbaijan. Check out the site and choose which is the best one for yo</p>
             <a href="#desc"><button class="btn-gradient">Learn more</button></a>
         </div>
         <div class="service-info-items">
-            <div class="service-info-item">
-                <div class="service-info-items-icon">
-                    <img src="img/azercell.jpeg" alt="" width="90">
-                </div>
-                <div class="service-info-items-text">
-                    <h4>Azercell</h4>
-                    <p>
-                        Rapidly increasing 4G network of Azercell covers nearly 60 regions of the country, including Baku and Absheron peninsula. According to the results of mobile network quality and wireless coverage mapping surveys by international systems
-                    </p>
-                </div>
-            </div>
             <div class="service-info-item">
                 <div class="service-info-items-icon">
                     <img src="img/bakcell.jpg" alt="">
@@ -132,6 +120,17 @@
                     <p>
                         Fastest speed of Bakcell’s mobile internet is being regularly recognized on the local and international level. In 2018 Bakcell was named “Azerbaijan’s Fastest Mobile Network” by “Ookla” company. It was confirmed that Bakcell has the best average download
                         speed in the country. </p>
+                </div>
+            </div>
+            <div class="service-info-item">
+                <div class="service-info-items-icon">
+                    <img src="img/azercell.jpeg" alt="" width="90">
+                </div>
+                <div class="service-info-items-text">
+                    <h4>Azercell</h4>
+                    <p>
+                        Rapidly increasing 4G network of Azercell covers nearly 60 regions of the country, including Baku and Absheron peninsula. According to the results of mobile network quality and wireless coverage mapping surveys by international systems
+                    </p>
                 </div>
             </div>
             <div class="service-info-item">
@@ -151,13 +150,13 @@
     <!-- <section id="product-visual-info"></section> -->
 
     <section id="packages">
-        <h3>Most profiteable tarrifs</h3><br>
-        <h4>Pick a Pricing Plan</h4><br>
+        <h3>Most profiteable tarrifs</h3>
+        <h4>Pick a Pricing Plan</h4>
         <div class="packages-container">
             <div class="package">
-                <h2>
+                <h3>
                     Azercell
-                </h2>
+                </h3>
                 <h3>
                     GencOl
                 </h3>
@@ -165,11 +164,11 @@
                 <p>600 Minute Calls</p>
                 <p>3 GB Internet </p>
                 <p>Limitless whatsapp texting</p>
-                <p>For ordering G9 = 7575</p>
+                <p>For ordering G9=7575</p>
                 <button class=' btn-gradient '>Order now</button>
             </div>
             <div class="package">
-                <h2>Bakcell</h2>
+                <h3>Bakcell</h3>
                 <h3>DaimOnline</h3>
                 <h4> 10 manats /month</h4>
                 <p>100 Minute Calls</p>
@@ -179,7 +178,7 @@
                 <button class=' btn-gradient '>Order now</button>
             </div>
             <div class="package">
-                <h2>Nar</h2>
+                <h3>Nar</h3>
                 <h3>Cavan Nar</h3>
 
                 <h4>9 manats /month</h4>
@@ -192,6 +191,7 @@
         </div>
     </section>
 
+    <!-- <section id="operators"></section> -->
     <footer>
         <div>
             <div class="footer-logo">
@@ -201,7 +201,7 @@
                 </p>
             </div>
             <div class="help-line">
-                <h4>Mobile Services</h4>
+                <h3>Mobile Services</h3>
                 <ul>
                     <li><a href="azercell.html">Azercell</a></li>
                     <li><a href="bakcell.html">Bakcell</a></li>
@@ -209,7 +209,7 @@
                 </ul>
             </div>
             <div class="menu-line">
-                <h4>Menu Line</h4>
+                <h3>Menu Line</h3>
                 <ul>
                     <li><a href="">Home</a></a>
                     </li>
