--- a/azercell.html
+++ b/azercell.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3 logo">
-                    <img src="img/logo.png" alt="voopo" />
+                    <a href="index.html"><img src="img/logo.png" alt="voopo" /></a>
                 </div>
                 <div class="col-md-9 menu">
                     <ul>
@@ -56,7 +56,7 @@
                 <p>3 GB / 6 GB Internet</p>
                 <p>Unlimited texting in Whatsapp</p>
                 <p>3 GB/ 6 GB Internet for Azercell apps</p>
-                <button class='btn-gradient'>Order now</button>
+                <button class=' btn-gradient '><a href="https://www.azercell.com/az/personal/tariffs/prepaid/genc_ol/" target="blank" style="color:#fff">Order now</a></button>
             </div>
             <div class="package">
                 <h3>Bolge</h3>
@@ -65,7 +65,8 @@
                 <p>Local calls in regions - 0.05 AZN</p>
                 <p>1 SMS - 0.05 AZN</p>
                 <p>1 MB - 0.40 AZN</p>
-                <button class='btn-gradient'>Order now</button>
+                <button class=' btn-gradient '><a href="https://www.azercell.com/az/personal/tariffs/prepaid/bolge/" target="blank" style="color:#fff">Order now</a></button>
+
             </div>
             <div class="package">
                 <h3>Data tariff</h3>
@@ -74,8 +75,8 @@
                 <p>1 Gb Internet - 5 AZN</p>
                 <p>5 GB Internet - 10 AZN</p>
                 <p>1 MB- 0.04 AZB without package</p>
+                <button class=' btn-gradient '><a href="https://www.azercell.com/az/personal/tariffs/prepaid/data_tariff/" target="blank" style="color:#fff">Order now</a></button>
 
-                <button class='btn-gradient'>Order now</button>
             </div>
 
         </div>
@@ -92,7 +93,7 @@
                 <p>Period of Usage - 15 days</p>
                 <p>Unlimited texting in Whatsapp</p>
                 <p>Auto refreshing of package</p>
-                <button class='btn-gradient'>Order now</button>
+                <button class=' btn-gradient '><a href="https://www.azercell.com/az/personal/internet/datapacks/packs/" target="blank" style="color:#fff">Order now</a></button>
             </div>
             <div class="package">
 
@@ -101,7 +102,7 @@
                 <p>Period of Usage - 1 month</p>
                 <p>Unlimited texting in Whatsapp</p>
                 <p>Auto refreshing of package</p>
-                <button class='btn-gradient'>Order now</button>
+                <button class=' btn-gradient '><a href="https://www.azercell.com/az/personal/internet/datapacks/internet_packages/" target="blank" style="color:#fff">Order now</a></button>
             </div>
             <div class="package">
 
@@ -110,7 +111,7 @@
                 <p>Period of Usage - 1 month</p>
                 <p>Unlimited texting in Whatsapp</p>
                 <p>Auto refreshing of package</p>
-                <button class='btn-gradient'>Order now</button>
+                <button class=' btn-gradient '><a href="https://www.azercell.com/az/personal/internet/datapacks/internet_packages/" target="blank" style="color:#fff">Order now</a></button>
             </div>
 
         </div>
@@ -124,7 +125,7 @@
                 <p>Period of Usage -1 month</p>
                 <p>Unlimited texting in Whatsapp</p>
                 <p>Auto refreshing of packahe</p>
-                <button class='btn-gradient'>Order now</button>
+                <button class=' btn-gradient '><a href="https://www.azercell.com/az/personal/internet/datapacks/internet_packages/" target="blank" style="color:#fff">Order now</a></button>
             </div>
             <div class="package">
 
@@ -157,7 +158,7 @@
                     We are here to get you familiar with mobile operators which are functioning in Azerbaijan. Check out the site and choose which is the best one for you</p>
             </div>
             <div class="help-line">
-                <h4>Mobile Services</h4>
+                <h3>Mobile Services</h3>
                 <ul>
                     <li><a href="azercell.html">Azercell</a></li>
                     <li><a href="bakcell.html">Bakcell</a></li>
@@ -165,13 +166,13 @@
                 </ul>
             </div>
             <div class="menu-line">
-                <h4>Menu Line</h4>
+                <h3>Menu Line</h3>
                 <ul>
-                    <li><a href="">Home</a></a>
+                    <li><a href="index.html">Home</a></a>
                     </li>
-                    <li><a href="#service-info">Service</a></li>
-                    <li><a href="#desc">About</a></li>
-                    <li><a href="">Contact</a></li>
+                    <li><a href="index.html#service-info">Service</a></li>
+                    <li><a href="index.html#desc">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
         </div>
