--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-3 logo">
-          <a href="">
+          <a href="index.html">
             <img src="img/logo.png" alt="" />
           </a>
         </div>
@@ -79,7 +79,7 @@
                 <p>3 GB Internet </p>
                 <p>Limitless whatsapp texting</p>
                 <p>For ordering G9=7575</p>
-                <button class=' btn-gradient '>Order now</button>        
+                <button class=' btn-gradient '><a href="https://www.azercell.com/az/personal/tariffs/prepaid/genc_ol/" target="blank" style="color:#fff">Order now</a></button>  
             </div>
             <div class="package">
                 <h3>Bakcell</h3>
@@ -89,7 +89,7 @@
                 <p>5 GB Internet</p>
                 <p>Free Whatsap</p>
                 <p>Free Facebook</p>
-                <button class=' btn-gradient '>Order now</button>
+                <button class=' btn-gradient '><a href="https://www.bakcell.com/az/daimonline10" target="blank" style="color:#fff">Order now</a></button>
             </div>
             <div class="package">
                 <h3>Nar</h3>
@@ -100,7 +100,7 @@
                 <p>5 GB Intenrt</p> 
                 <p>5 GB Social Media</p>
                 <p>Send C9 to 777</p>
-                <button class=' btn-gradient '>Order now</button>
+                <button class=' btn-gradient '><a href="https://www.nar.az/cavannar-9/" target="blank" style="color:#fff">Order now</a></button>
             </div>
         </div>
     </section>
@@ -114,7 +114,7 @@
           There are variations of passages of Lorem Ipsum available, the majority have suffered alteration.</p>
       </div>
       <div class="help-line">
-        <h4>Mobile Services</h4>
+        <h3>Mobile Services</h3>
         <ul>
           <li><a href="azercell.html">Azercell</a></li>
           <li><a href="bakcell.html">Bakcell</a></li>
@@ -122,12 +122,12 @@
         </ul>
       </div>
       <div class="menu-line">
-        <h4>Menu Line</h4>
+        <h3>Menu Line</h3>
         <ul>
-          <li><a href="">Home</a></a></li>
-          <li><a href="#service-info">Service</a></li>
-          <li><a href="#desc">About</a></li>
-          <li><a href="">Contact</a></li>
+          <li><a href="index.html">Home</a></a></li>
+          <li><a href="index.html#desc">About</a></li>
+          <li><a href="index.html#service-info">Service</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </div>
     </div>
