--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 <p>3 GB Internet </p>
                 <p>Limitless whatsapp texting</p>
                 <p>For ordering G9=7575</p>
-                <button class=' btn-gradient '>Order now</button>
+                <button class=' btn-gradient '><a href="https://www.azercell.com/az/personal/tariffs/prepaid/genc_ol/" target="blank" style="color:#fff">Order now</a></button>
             </div>
             <div class="package">
                 <h3>Bakcell</h3>
@@ -175,7 +175,7 @@
                 <p>5 GB Internet</p>
                 <p>Free Whatsap</p>
                 <p>Free Facebook</p>
-                <button class=' btn-gradient '>Order now</button>
+                <button class=' btn-gradient '><a href="https://www.bakcell.com/az/daimonline10" target="blank" style="color:#fff">Order now</a></button>
             </div>
             <div class="package">
                 <h3>Nar</h3>
@@ -186,7 +186,8 @@
                 <p>5 GB Intenrt</p>
                 <p>5 GB Social Media</p>
                 <p>Send C9 to 777</p>
-                <button class=' btn-gradient '>Order now</button>
+                <button class=' btn-gradient '><a href="https://www.nar.az/cavannar-9/" target="blank" style="color:#fff">Order now</a></button>
+
             </div>
         </div>
     </section>
