--- a/nar.html
+++ b/nar.html
@@ -16,7 +16,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3 logo">
-                    <a href="/">
+                    <a href="index.html">
                         <img src="img/logo.png" alt="voopo" />
                     </a>
                 </div>
@@ -55,7 +55,7 @@
                 <p>3 GB / 6 GB Internet</p>
                 <p>Unlimited texting in Whatsapp</p>
                 <p>3 GB/ 6 GB Internet for Nar apps</p>
-                <button class='btn-gradient'>Order now</button>
+                <button class=' btn-gradient '><a href="https://www.nar.az/cavannar-9/" target="blank" style="color:#fff">Order now</a></button>
             </div>
             <div class="package">
                 <h3>Yerlim</h3>
@@ -64,7 +64,8 @@
                 <p>Local calls in regions - 0.05 AZN</p>
                 <p>1 SMS - 0.05 AZN</p>
                 <p>1 MB - 0.40 AZN</p>
-                <button class='btn-gradient'>Order now</button>
+                <button class=' btn-gradient '><a href="https://www.nar.az/yerlim/" target="blank" style="color:#fff">Order now</a></button>
+
             </div>
             <div class="package">
                 <h3>Unikal</h3>
@@ -73,8 +74,8 @@
                 <p>1 Gb Internet - 5 AZN</p>
                 <p>5 GB Internet - 10 AZN</p>
                 <p>1 MB- 0.04 AZB without package</p>
+                <button class=' btn-gradient '><a href="https://www.nar.az/unikal/" target="blank" style="color:#fff">Order now</a></button>
 
-                <button class='btn-gradient'>Order now</button>
             </div>
 
         </div>
@@ -91,7 +92,7 @@
                 <p>Period of Usage - 15 days</p>
                 <p>Unlimited texting in Whatsapp</p>
                 <p>Auto refreshing of package</p>
-                <button class='btn-gradient'>Order now</button>
+                <button class=' btn-gradient '><a href="https://www.nar.az/limitsiz-internet-paketler/" target="blank" style="color:#fff">Order now</a></button>
             </div>
             <div class="package">
 
@@ -100,7 +101,7 @@
                 <p>Period of Usage - 1 month</p>
                 <p>Unlimited texting in Whatsapp</p>
                 <p>Auto refreshing of package</p>
-                <button class='btn-gradient'>Order now</button>
+                <button class=' btn-gradient '><a href="https://www.nar.az/limitsiz-internet-paketler/" target="blank" style="color:#fff">Order now</a></button>
             </div>
             <div class="package">
 
@@ -109,7 +110,7 @@
                 <p>Period of Usage - 1 month</p>
                 <p>Unlimited texting in Whatsapp</p>
                 <p>Auto refreshing of package</p>
-                <button class='btn-gradient'>Order now</button>
+                <button class=' btn-gradient '><a href="https://www.nar.az/limitsiz-internet-paketler/" target="blank" style="color:#fff">Order now</a></button>
             </div>
 
         </div>
@@ -123,7 +124,7 @@
                 <p>Period of Usage -1 month</p>
                 <p>Unlimited texting in Whatsapp</p>
                 <p>Auto refreshing of packahe</p>
-                <button class='btn-gradient'>Order now</button>
+                <button class=' btn-gradient '><a href="https://www.nar.az/limitsiz-internet-paketler/" target="blank" style="color:#fff">Order now</a></button>
             </div>
             <div class="package">
 
@@ -132,7 +133,7 @@
                 <p>Period of Usage - 15 days</p>
                 <p>Unlimited texting in Whatsapp</p>
                 <p>Auto refreshing of packahe</p>
-                <button class='btn-gradient'>Order now</button>
+                <button class=' btn-gradient '><a href="https://www.nar.az/limitsiz-internet-paketler/" target="blank" style="color:#fff">Order now</a></button>
             </div>
             <div class="package">
 
@@ -141,7 +142,7 @@
                 <p>Period of Usage - 15 days</p>
                 <p>Unlimited texting in Whatsapp</p>
                 <p>Auto refreshing of packahe</p>
-                <button class='btn-gradient'>Order now</button>
+                <button class=' btn-gradient '><a href="https://www.nar.az/limitsiz-internet-paketler/" target="blank" style="color:#fff">Order now</a></button>
             </div>
 
         </div>
@@ -156,7 +157,7 @@
                     We are here to get you familiar with mobile operators which are functioning in Azerbaijan. Check out the site and choose which is the best one for you</p>
             </div>
             <div class="help-line">
-                <h4>Mobile Services</h4>
+                <h3>Mobile Services</h3>
                 <ul>
                     <li><a href="azercell.html">Azercell</a></li>
                     <li><a href="bakcell.html">Bakcell</a></li>
@@ -164,13 +165,13 @@
                 </ul>
             </div>
             <div class="menu-line">
-                <h4>Menu Line</h4>
+                <h3>Menu Line</h3>
                 <ul>
-                    <li><a href="">Home</a></a>
+                    <li><a href="index.html">Home</a></a>
                     </li>
-                    <li><a href="#service-info">Service</a></li>
-                    <li><a href="#desc">About</a></li>
-                    <li><a href="">Contact</a></li>
+                    <li><a href="index.html#service-info">Service</a></li>
+                    <li><a href="index.html#desc">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
         </div>
