--- a/bakcell.html
+++ b/bakcell.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
     <link rel="stylesheet" href="css/style.css" />
     <script src="https://kit.fontawesome.com/63852fa8cf.js" crossorigin="anonymous"></script>
     <title>Mobile Operators | Bakcell</title>
@@ -15,7 +16,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3 logo">
-                    <a href="/">
+                    <a href="index.html">
                         <img src="img/logo.png" alt="" />
                     </a>
                 </div>
@@ -34,8 +35,12 @@
     <section id="bakcell">
         <div class="bakcell-bg"></div>
         <div class="bg">
-            <p>Bakcell is part of NEQSOL Holding, which is diversified group of companies operating across industries and countries. The main areas of business operations include oil and gas, telecommunications, hi-tech, and construction industries. The
-                geographical area in which companies within group provide operations and services includes countries such as the UK, the USA, Turkey, Azerbaijan, Ukraine, Georgia, Kazakhstan, United Arab Emirates, and Bangladesh.
+            <p>Bakcell is part of NEQSOL Holding, which is diversified group of companies operating across industries
+                and countries. The main areas of business operations include oil and gas, telecommunications, hi-tech,
+                and construction industries. The
+                geographical area in which companies within group provide operations and services includes countries
+                such as the UK, the USA, Turkey, Azerbaijan, Ukraine, Georgia, Kazakhstan, United Arab Emirates, and
+                Bangladesh.
             </p>
         </div>
     </section>
@@ -54,7 +59,8 @@
                 <p>1000 sms</p>
                 <p>Unlimited texting in Whatsapp</p>
                 <p>500MB Internet for Bakcell apps</p>
-                <button class='btn-gradient'>Order now</button>
+                <button class=' btn-gradient '><a href="https://www.bakcell.com/az/elasaat" target="blank"
+                        style="color:#fff">Order now</a></button>
             </div>
             <div class="package">
                 <h3>DaimOnline</h3>
@@ -63,7 +69,9 @@
                 <p>3 GB / 6 GB Internet</p>
                 <p>Unlimited texting in Whatsapp</p>
                 <p>3 GB/ 6 GB Internet for Bakcell apps</p>
-                <button class='btn-gradient'>Order now</button>
+                <button class=' btn-gradient '><a href="https://www.bakcell.com/az/daimonline6" target="blank"
+                        style="color:#fff">Order now</a></button>
+
             </div>
             <div class="package">
                 <h3>ILK</h3>
@@ -72,8 +80,9 @@
                 <p>2 AZN FREE</p>
                 <p>5 GB Internet - 10 AZN</p>
                 <p>1 MB- 0.04 AZB without package</p>
+                <button class=' btn-gradient '><a href="https://www.bakcell.com/az/ilk" target="blank"
+                        style="color:#fff">Order now</a></button>
 
-                <button class='btn-gradient'>Order now</button>
             </div>
 
         </div>
@@ -90,7 +99,8 @@
                 <p>Period of Usage - 15 days</p>
                 <p>Unlimited texting in Whatsapp</p>
                 <p>Auto refreshing of package</p>
-                <button class='btn-gradient'>Order now</button>
+                <button class=' btn-gradient '><a href="https://www.bakcell.com/az/internet-for-smartphones"
+                        target="blank" style="color:#fff">Order now</a></button>
             </div>
             <div class="package">
 
@@ -99,7 +109,8 @@
                 <p>Period of Usage - 1 month</p>
                 <p>Unlimited texting in Whatsapp</p>
                 <p>Auto refreshing of package</p>
-                <button class='btn-gradient'>Order now</button>
+                <button class=' btn-gradient '><a href="https://www.bakcell.com/az/internet-for-smartphones"
+                        target="blank" style="color:#fff">Order now</a></button>
             </div>
             <div class="package">
 
@@ -108,7 +119,8 @@
                 <p>Period of Usage - 1 month</p>
                 <p>Unlimited texting in Whatsapp</p>
                 <p>Auto refreshing of package</p>
-                <button class='btn-gradient'>Order now</button>
+                <button class=' btn-gradient '><a href="https://www.bakcell.com/az/internet-for-smartphones"
+                        target="blank" style="color:#fff">Order now</a></button>
             </div>
 
         </div>
@@ -122,7 +134,8 @@
                 <p>Period of Usage -1 month</p>
                 <p>Unlimited texting in Whatsapp</p>
                 <p>Auto refreshing of packahe</p>
-                <button class='btn-gradient'>Order now</button>
+                <button class=' btn-gradient '><a href="https://www.bakcell.com/az/internet-for-smartphones"
+                        target="blank" style="color:#fff">Order now</a></button>
             </div>
             <div class="package">
 
@@ -131,7 +144,9 @@
                 <p>Period of Usage - 15 days</p>
                 <p>Unlimited texting in Whatsapp</p>
                 <p>Auto refreshing of packahe</p>
-                <button class='btn-gradient'>Order now</button>
+                <button class=' btn-gradient '><a href="https://www.bakcell.com/az/internet-for-smartphones"
+                        target="blank" style="color:#fff">Order now</a></button>
+
             </div>
             <div class="package">
 
@@ -140,7 +155,9 @@
                 <p>Period of Usage - 15 days</p>
                 <p>Unlimited texting in Whatsapp</p>
                 <p>Auto refreshing of packahe</p>
-                <button class='btn-gradient'>Order now</button>
+                <button class=' btn-gradient '><a href="https://www.bakcell.com/az/internet-for-smartphones"
+                        target="blank" style="color:#fff">Order now</a></button>
+
             </div>
 
         </div>
@@ -152,10 +169,11 @@
             <div class="footer-logo">
                 <img src="img/logo.png" width="190" height="73" alt="">
                 <p>
-                    We are here to get you familiar with mobile operators which are functioning in Azerbaijan. Check out the site and choose which is the best one for you</p>
+                    We are here to get you familiar with mobile operators which are functioning in Azerbaijan. Check out
+                    the site and choose which is the best one for you</p>
             </div>
             <div class="help-line">
-                <h4>Mobile Services</h4>
+                <h3>Mobile Services</h3>
                 <ul>
                     <li><a href="azercell.html">Azercell</a></li>
                     <li><a href="bakcell.html">Bakcell</a></li>
@@ -163,13 +181,13 @@
                 </ul>
             </div>
             <div class="menu-line">
-                <h4>Menu Line</h4>
+                <h3>Menu Line</h3>
                 <ul>
-                    <li><a href="">Home</a></a>
+                    <li><a href="index.html">Home</a></a>
                     </li>
-                    <li><a href="#service-info">Service</a></li>
-                    <li><a href="#desc">About</a></li>
-                    <li><a href="">Contact</a></li>
+                    <li><a href="index.html#service-info">Service</a></li>
+                    <li><a href="index.html#desc">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
         </div>
